--- a/ClarityCheck/css/layout.css
+++ b/ClarityCheck/css/layout.css
@@ -1,4 +1,4 @@
-/* ~~~~~~~~~~~~~~ LOGIN & SIGNUP PAGE ~~~~~~~~~~~~~~ */
+/* ~~~~~~~~~~~~~~ LOGIN & SIGNUP PAGE (CSS styling taken from https://www.w3schools.com/howto/howto_css_login_form.asp) ~~~~~~~~~~~~~~ */
 
 /* Bordered form */
 form {
